--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -82,6 +82,7 @@
 		<dependency>
 			<groupId>org.springframework.mobile</groupId>
 			<artifactId>spring-mobile-device</artifactId>
+			<version>1.1.5.RELEASE</version>
 		</dependency>
 
 		<!-- JWT -->
