--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -8,7 +8,6 @@
 	<packaging>jar</packaging>
 
 	<name>auth-service</name>
-	<url>http://maven.apache.org</url>
 
 	<properties>
 	
@@ -37,7 +36,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.1.RELEASE</version>
+		<version>2.0.0.RELEASE</version>
 	</parent>
 
 	<dependencies>
@@ -54,11 +53,7 @@
 			<artifactId>spring-cloud-starter</artifactId>
 		</dependency>
 		
-		<!-- Eureka service registration -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-eureka-server</artifactId>
-		</dependency>
+
 
 		<!-- Spring Security -->
 		<dependency>
@@ -66,11 +61,14 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
-		<!-- Spring Data - Mongo -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-mongodb -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-mongodb</artifactId>
+			<version>2.0.6.RELEASE</version>
 		</dependency>
+		<!-- Spring Data - Mongo -->
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -92,12 +90,6 @@
 			<version>${jjwt.version}</version>
 		</dependency>
 		
-		<!-- RxJava -->
-		<dependency>
-			<groupId>io.reactivex</groupId>
-			<artifactId>rxjava</artifactId>
-			<version>${rxjava.version}</version><!--$NO-MVN-MAN-VER$-->
-		</dependency>
 
 		<!-- Logger -->
 		<dependency>
@@ -132,23 +124,20 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- Testing starter -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-		</dependency>
+
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-core</artifactId>
 			<version>3.0.5.RELEASE</version>
 		</dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.16.10</version>
-        </dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>2.0.0.RELEASE</version>
+		</dependency>
 
-    </dependencies>
+
+	</dependencies>
 	
 	<dependencyManagement>
 		<dependencies>
